--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -279,7 +279,7 @@
                                            oncomplete="document.getElementById('mainFRM:btnOpenForm').click();"/>
                             <p:commandLink value="#{bundle.PartnerTypes}"
                                            disabled="#{!sessionBean.userAdmin}"
-                                           actionListener="#{sessionBean.setOpenFormName('partnertype-explorer')}"
+                                           actionListener="#{sessionBean.setOpenFormName('partnertypes-explorer')}"
                                            oncomplete="document.getElementById('mainFRM:btnOpenForm').click();"/>
                         </p:panelGrid>
                     </p:panel>
