--- a/escom-bpm-web/src/main/webapp/view/processes/process-list.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-list.xhtml
@@ -42,7 +42,7 @@
         <p:column headerText="#{bundle.Commands}" > 
             <p:splitButton  value="#{bundle.Open}" title="#{bundle.Open}"                                                   
                             actionListener="#{_bean.setSelectedProc(doc)}"
-                            oncomplete="document.getElementById('#{_frm}:mainTabView:openProcessBtn').click();">                              
+                            oncomplete="document.getElementById('mainFRM:mainTabView:openProcessBtn').click();">                              
             </p:splitButton>
         </p:column>
     </p:dataTable>
