--- a/escom-bpm-web/src/main/webapp/view/common/dict-details.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-details.xhtml
@@ -30,11 +30,11 @@
 
             <p:column headerText="#{bundle.Actions}" style="text-align: center;" > 
                 <p:commandButton icon="ui-icon-folder-open" title="#{bundle.Open}" 
-                                 update="#{_frm}:mainTabView:panelDetail"
+                                 update="mainFRM:mainTabView:panelDetail"
                                  actionListener="#{_bean.onOpenDetail(item)}">              
                 </p:commandButton>
                 <p:commandButton icon="ui-icon-trash" title="#{bundle.Delete}" 
-                                 update="#{_frm}:mainTabView:panelDetail"
+                                 update="mainFRM:mainTabView:panelDetail"
                                  disabled="#{_bean.isReadOnly()}"
                                  actionListener="#{_bean.onDeleteDetail(item)}">              
                 </p:commandButton>
@@ -45,7 +45,7 @@
                                  icon="ui-icon-trash" title="#{bundle.Delete}"
                                  immediate="true"
                                  disabled="#{_bean.isReadOnly() or _bean.checkedGroups.isEmpty()}"
-                                 update="#{_frm}:mainTabView:panelDetail"
+                                 update="mainFRM:mainTabView:panelDetail"
                                  actionListener="#{_bean.onDeleteCheckedDetails()}"/>
                 <p:commandButton id="btnCretate" value="#{bundle.Add}" 
                                  icon="ui-icon-circle-plus"
@@ -53,7 +53,7 @@
                                  disabled="#{_bean.isReadOnly()}"
                                  actionListener="#{_bean.onCreateDetail()}">
                     <p:ajax event="dialogReturn" listener="#{_bean.afterCloseDetailItem}" 
-                            update="#{_frm}:mainTabView:panelDetail"/>
+                            update="mainFRM:mainTabView:panelDetail"/>
                 </p:commandButton>
             </f:facet>
         </p:dataTable>
