--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -57,7 +57,7 @@
                             <ui:param name="_items" value="#{docTypeBean.findAll()}"/>
                             <ui:param name="_actionClear" value="setDocType"/>
                             <ui:param name="_actionSelect" value="onDocTypeSelected"/>
-                            <ui:param name="_update" value="#{_frm}:mainTabView:regNumberPanel #{_frm}:mainTabView:docStatusTbl #{_frm}:mainTabView:explToolBar"/>
+                            <ui:param name="_update" value="mainFRM:mainTabView:regNumberPanel mainFRM:mainTabView:docStatusTbl mainFRM:mainTabView:explToolBar"/>
                         </ui:include>
                     </h:panelGrid>
                    
@@ -153,13 +153,13 @@
 
     <ui:define name="specActionMenu">
         <p:menuitem icon="ui-icon-extlink" value="#{bundle.SaveAndPublish}"     
-                    oncomplete="document.getElementById('#{_frm}:mainTabView:btnSaveCloseAndPublic').click();"/>                
+                    oncomplete="document.getElementById('mainFRM:mainTabView:btnSaveCloseAndPublic').click();"/>                
     </ui:define>
     
     <ui:define name="specSubMenu"> 
-        <p:submenu label="#{bundle.Document}" icon="ui-icon-document" styleClass="submenu">
+        <p:menuButton value="#{bundle.Document}" icon="ui-icon-document" styleClass="submenu">
             <p:menuitem icon="ui-icon-clipboard" value="#{bundle.AddVersionFromScan}" rendered="false"    
-                        oncomplete="document.getElementById('#{_frm}:mainTabView:btnScan').click();"/>                             
+                        oncomplete="document.getElementById('mainFRM:mainTabView:btnScan').click();"/>                             
             <p:separator rendered="false"  />
             <p:menuitem icon="ui-icon-arrowthickstop-1-s" value="#{bundle.DownloadCurrentVersion}"
                         disabled="#{_bean.editedItem.mainAttache == null}" ajax="false"
@@ -188,20 +188,20 @@
             <p:menuitem icon="ui-icon-mail-open" value="#{bundle.SendToEmailAsAttache}"
                         rendered="#{_bean.editedItem.id != null}"
                         actionListener="#{docCardBean.prepareSendMailDoc('asAttache')}"/>
-        </p:submenu>
-        <p:submenu label="#{bundle.Processes}" icon="ui-icon-extlink" styleClass="submenu"
+        </p:menuButton>
+        <p:menuButton value="#{bundle.Processes}" icon="ui-icon-extlink" styleClass="submenu"
                    rendered="#{applicationBean.licence.isCanUses(DictModules.MODULE_PROCESSES)}">
             <p:menuitem icon="ui-icon-extlink" value="#{bundle.ConcordedDoc}" 
-                        oncomplete="document.getElementById('#{_frm}:btnConcordedDoc').click();">                
+                        oncomplete="document.getElementById('mainFRM:btnConcordedDoc').click();">                
             </p:menuitem>
-        </p:submenu>
+        </p:menuButton>
     </ui:define>
 
     <ui:define name="specMenuButtons">
         <p:commandButton id="btnSaveCloseAndPublic" value="#{bundle.SaveAndPublish}" 
                     rendered="#{!_bean.isReadOnly() and _bean.editedItem.state.currentState.id == 5}"
                     icon="ui-icon-extlink"
-                    update="#{_frm}"
+                    update="mainFRM"
                     action="#{_bean.prepSaveItemAndPublic()}"
                     onclick="if (itemChange == 1) {
                                 onChangeItem();
@@ -210,9 +210,9 @@
         </p:commandButton>
     </ui:define>
     
-    <ui:define name="card_scripts">
+    <ui:define name="form_scripts">
         <p:commandButton id="setLockBtn" actionListener="#{docCardBean.onLockSelectedAttache()}" style="display: none;">
-            <p:ajax event="dialogReturn" listener="#{docCardBean.onUpdateSelectedAttache()}" update="#{_frm}:mainTabView:versionsTBL"/>
+            <p:ajax event="dialogReturn" listener="#{docCardBean.onUpdateSelectedAttache()}" update="mainFRM:mainTabView:versionsTBL"/>
         </p:commandButton>
          <p:commandButton id="btnConcordedDoc" actionListener="#{docCardBean.onConcordedDoc()}" style="display: none;">
              <p:ajax event="dialogReturn" listener="#{docCardBean.afterCloseProcess}"/>
