--- a/escom-bpm-web/src/main/webapp/view/docs/doc-links.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-links.xhtml
@@ -9,7 +9,7 @@
                          onstart="PF('statusDialog').show()"
                          oncomplete="PF('statusDialog').hide();"
                          style="display: none;"> 
-            <p:ajax event="dialogReturn" listener="#{_bean.onUpdateLinkedDocs()}" update="#{_frm}:mainTabView:tblLinkedDocs"/>
+            <p:ajax event="dialogReturn" listener="#{_bean.onUpdateLinkedDocs()}" update="mainFRM:mainTabView:tblLinkedDocs"/>
         </p:commandButton>
 
         <p:panelGrid id="panelLinkedDocs" columns="1" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
@@ -37,7 +37,7 @@
                          sortBy="#{doc.regNumber}" rowKey="#{doc.id}">
 
                 <p:ajax event="rowDblselect" listener="#{_bean.onRowDblClckOpen}"                                         
-                        oncomplete="document.getElementById('#{_frm}:mainTabView:openDocBtn').click();"/>
+                        oncomplete="document.getElementById('mainFRM:mainTabView:openDocBtn').click();"/>
 
                 <p:column width="16" sortBy="#{doc.iconName}">
                     <p:graphicImage id="itemIcon" value="/resources/icon/#{doc.iconName}.png"/>  
@@ -71,7 +71,7 @@
                 <p:column headerText="#{bundle.Commands}" > 
                     <p:splitButton  value="#{bundle.Open}" title="#{bundle.Open}"                                                   
                                     actionListener="#{_bean.setLinkedDoc(doc)}"
-                                    oncomplete="document.getElementById('#{_frm}:mainTabView:openDocBtn').click();">
+                                    oncomplete="document.getElementById('mainFRM:mainTabView:openDocBtn').click();">
                         <p:menuitem icon="ui-icon-zoomin" value="#{bundle.View}" title="#{bundle.View}"
                                     process="@this"
                                     onstart="PF('statusDialog').show()"
