--- a/escom-bpm-web/src/main/webapp/view/docs/doc-list.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-list.xhtml
@@ -14,7 +14,7 @@
                  sortBy="#{doc.regNumber}" rowKey="#{doc.id}">
 
         <p:ajax event="rowDblselect" listener="#{_bean.onRowDblClckOpen}"                                         
-                oncomplete="document.getElementById('#{_frm}:mainTabView:openDocBtn').click();"/>
+                oncomplete="document.getElementById('mainFRM:mainTabView:openDocBtn').click();"/>
 
         <p:column width="16" sortBy="#{doc.iconName}">
             <p:graphicImage id="itemIcon" value="/resources/icon/#{doc.iconName}.png"/>  
@@ -41,13 +41,13 @@
         <p:column headerText="#{bundle.Name}" sortBy="#{doc.name}">
             <p:commandLink value="#{doc.name}" rendered="#{doc.getClass().getSimpleName()== 'Doc'}"
                            actionListener="#{_bean.setSelectedDoc(doc)}"
-                           oncomplete="document.getElementById('#{_frm}:mainTabView:openDocBtn').click();"/>
+                           oncomplete="document.getElementById('mainFRM:mainTabView:openDocBtn').click();"/>
         </p:column>                       
 
         <p:column headerText="#{bundle.Commands}" > 
             <p:splitButton  value="#{bundle.Open}" title="#{bundle.Open}"                                                   
                             actionListener="#{_bean.setSelectedDoc(doc)}"
-                            oncomplete="document.getElementById('#{_frm}:mainTabView:openDocBtn').click();">
+                            oncomplete="document.getElementById('mainFRM:mainTabView:openDocBtn').click();">
                 <p:menuitem icon="ui-icon-zoomin" value="#{bundle.View}" title="#{bundle.View}"
                             disabled="#{doc.mainAttache == null}"
                             actionListener="#{docBean.onViewMainAttache(doc)}"/>
