--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -2,8 +2,7 @@
         xmlns="http://www.w3.org/1999/xhtml"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui"
-        xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:f="http://xmlns.jcp.org/jsf/core">
+        xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirm" width="470" height="195" modal="true" resizable="false"
               maximizable="false" closeOnEscape="true">
@@ -18,7 +17,7 @@
                 <h:panelGroup>
                     <p:commandButton value="#{bundle.ExitNoSave}" style="float:right; "
                                      title="#{bundle.ExitWithoutSaving}"
-                                     action="#{_bean.onFinalCancelSave()}"
+                                     actionListener="#{_bean.onFinalCancelSave()}"
                                      onclick="PF('confirm').hide();">
                     </p:commandButton>
                     <p:spacer width="5" />
