--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -4,7 +4,7 @@
         xmlns:p="http://primefaces.org/ui"
         xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-    <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirm" width="470" height="195" modal="true" resizable="false"
+    <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirmDLG" width="470" height="195" modal="true" resizable="false"
               maximizable="false" closeOnEscape="true">
         <h:form>
             <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">                
@@ -18,12 +18,12 @@
                     <p:commandButton value="#{bundle.ExitNoSave}" style="float:right; "
                                      title="#{bundle.ExitWithoutSaving}"
                                      actionListener="#{_bean.onFinalCancelSave()}"
-                                     onclick="PF('confirm').hide();">
+                                     onclick="PF('confirmDLG').hide();">
                     </p:commandButton>
                     <p:spacer width="5" />
                     <p:commandButton value="#{bundle.Back}" style="float:right; "
                                      title="#{bundle.GoBackCard}"
-                                     onclick="PF('confirm').hide();">
+                                     onclick="PF('confirmDLG').hide();">
                     </p:commandButton>
                 </h:panelGroup>
                                 
